--- a/src/index.css
+++ b/src/index.css
@@ -1,55 +1,65 @@
-body {
-  background-color: #36393f; 
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  color: white;
+
+*{
+  text-align: center;
+}
+body{
+  background: -webkit-linear-gradient(0deg, rgba(96,34,195,1) 0%, rgba(253,45,237,1) 100%);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #ca46ff;
 }
 .title{
-  margin-top: 50px;
+  color: #fff;
+  margin: 10px;
 }
-
-.title a{
-  color: white;
-  text-decoration: none;
+.form{
+  margin-top: 60px;
 }
-.title h1{
-  font-size: 40px;
-}
-
-.add-note {
-  background-color: rgba(0, 0, 0, 0.5); 
-  border-radius: 15px;
+#note-form {
+  width: 450px; 
+  margin: 0 auto;
   padding: 30px;
-  margin: 50px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08); 
+  text-align: center; 
+  background: #e7e7e7;
+  border-radius: 15px;
 }
 
-.title {
-  text-align: center;
-  margin-bottom: 20px;
+#note-form label {
+  display: block;
+  margin-bottom: 5px; 
+  font-size: 18px;
+  font-weight: 600;
 }
-
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.form-control,
-textarea {
-  width: calc(100% - 2 * 10px);
-  margin-bottom: 15px;
-  background-color: rgba(255, 255, 255, 0.1); 
+#note-form input,
+#note-form textarea {
+  width: 100%; /* makes input and textarea fill the width of the form */
+  padding: 8px; /* adds padding to inputs */
+  margin-bottom: 15px; /* adds some space below inputs */
+  background: #ca46ff;
+  box-sizing: border-box; 
   border: none;
-  padding: 10px;
-  color: white;
-  border-radius: 13px;
+  border-radius: 15px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 16px;
 }
-.title-note{
-  width: 420px;
-}
-.btn-primary {
-  width: 100%;
+#note-form input{
+  padding: 15px;
 }
 
+#note-form .form-actions {
+  text-align: center; /* aligns the button to the center */
+}
+
+#note-form button {
+  background-color: #ca46ff; /* sets background color for button */
+  color: white; /* sets text color */
+  padding: 13px 25px; /* adds padding to the button */
+  border: none; /* removes border */
+  border-radius: 15px; /* adds border-radius */
+  cursor: pointer; /* changes cursor to pointer on hover */
+  font-size: 17px; /* sets font size */
+}
+
+#note-form button:hover {
+  background-color: #a100e1; 
+}
